name:                spy-safe-places
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cvk77/spy-safe-places
license:             BSD3
license-file:        LICENSE
author:              Christoph von Krüchten
maintainer:          cvk@treestack.de
copyright:           2019 Treestack GmbH
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options: -Wall
  exposed-modules: SafeSpaces
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends: 
      base >= 4.7 && < 5
    , array

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , spy-safe-places
    
  other-modules: SafeSpacesSpec
  default-language: Haskell2010